# engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_release.yml  lint.yml  pull.yml  push.yml
benchmark/: CMakeLists.txt
benchmark/math/: utils_benchmark.cpp
dev/bench/: data.js
scripts/: install-macos-deps.sh  install-ubuntu-gcc-9-deps.sh  install-ubuntu-latest-gcc-deps.sh  install-windows-deps.ps1
src/: CMakeLists.txt
src/graphics/: color_rgba.cpp  color_rgba.h  projections.cpp  projections.h
src/math/: fmath.cpp  fmath.h  geometry3.cpp  geometry3.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  plane.cpp  plane.h  point3.cpp  point3.h  quaternion.cpp  quaternion.h  transform4.cpp  transform4.h  utils.cpp  utils.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
test/: CMakeLists.txt
test/graphics/: color_rgba_tests.cpp
test/math/: matrix3_test.cpp  matrix4_test.cpp  utils_test.cpp  vector3_test.cpp
